--- a/css/styles_loginPage.css
+++ b/css/styles_loginPage.css
@@ -43,6 +43,40 @@ body
     border: 4px solid var(--alice-blue);
 }
 
+
+#loginForm 
+{
+    #loginNameLabel,
+    #loginPasswordLabel
+    {
+        display: inline-block;
+        text-align: right;
+        font-size: 20px;
+        width: 160px;
+    }
+
+    
+    #regFirstNameLabel,
+    #regLastNameLabel,
+    #regPhoneLabel,
+    #regEmailLabel 
+    {
+        display: none;
+        text-align: right;
+        font-size: 20px;
+        width: 160px;
+    }
+
+    #loginName,
+    #loginPassword
+    {
+        display: inline-block;
+        text-align: left;
+        font-size: 24px;
+        width: 240px;
+    }
+}
+
 #title-container
 {
 
@@ -110,7 +144,7 @@ body
 {
     font-size: 24px;
     text-align: left;
-    width: 80%;
+    width: 250px;
     margin-bottom: 2%;
     padding: 2px 4px 2px 4px;
     border:none;
