--- a/css/styles_loginPage.css
+++ b/css/styles_loginPage.css
@@ -51,8 +51,8 @@ body
     {
         display: inline-block;
         text-align: right;
-        font-size: 20px;
-        width: 160px;
+        font-size: 24px;
+        width: 28%;
     }
 
     
@@ -64,7 +64,7 @@ body
         display: none;
         text-align: right;
         font-size: 20px;
-        width: 160px;
+        width: 28%;
     }
 
     #loginName,
@@ -73,7 +73,7 @@ body
         display: inline-block;
         text-align: left;
         font-size: 24px;
-        width: 240px;
+        width: 50%;
     }
 }
 
