Adjusted register error messages

--- a/css/styles_loginPage.css
+++ b/css/styles_loginPage.css
@@ -318,6 +318,5 @@ select{
 #emailErrText {
     text-align: center;
     font-size: 12px;
-    margin-right: 15%;
-    margin-left: 15%;
+    color: #be070d;
 }
