--- a/css/styles_loginPage.css
+++ b/css/styles_loginPage.css
@@ -19,7 +19,7 @@ body
 {
     /*background-color: var(--smoky-black);*/
     background-image: url("/images/login-background.jpg");
-    background-size: 100%;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -37,45 +37,104 @@ body
     font-size: 30px;
     width: 50%;
     min-width: 500px;
-    max-width: 700px;
-    margin-top: 8%;
+    max-width: 750px;
+    margin-top: 5%;
     border-radius: 12px;
     border: 4px solid var(--alice-blue);
 }
 
 
-#loginForm 
+#loginForm
 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 12px;
+}
+
+#firstNameContainer,
+#lastNameContainer,
+#phoneContainer,
+#emailContainer
+{
+    display: none;
+}
+
+
+#loginNameLabel,
+#loginPasswordLabel
+{
+    display: inline-block;
+    text-align: right;
+    font-size: 20px;
+    width: 28%;
+}
+
+
+#regFirstNameLabel,
+#regLastNameLabel,
+#regPhoneLabel,
+#regEmailLabel
+{
+    display: inline-block;
+    text-align: right;
+    font-size: 20px;
+    width: 28%;
+}
+
+#regPhoneLabel
+{
+    min-width: 160px;
+}
+
+#loginName,
+#loginPassword
+{
+    display: inline-block;
+    text-align: left;
+    font-size: 20px;
+    width: 50%;
+}
+
+.formFieldGroup
+{
+    background-color: transparent;
+    margin-top: 6px;
     width: 90%;
-    #loginNameLabel,
-    #loginPasswordLabel
-    {
-        display: inline-block;
-        text-align: right;
-        font-size: 24px;
-        width: 28%;
-    }
+    border-radius: 6px;
+}
 
-    
-    #regFirstNameLabel,
-    #regLastNameLabel,
-    #regPhoneLabel,
-    #regEmailLabel 
-    {
-        display: none;
-        text-align: right;
-        font-size: 20px;
-        width: 28%;
-    }
+.formFieldGroup.error
+{
+    background-color: #ffc0cb;
+}
 
-    #loginName,
-    #loginPassword
-    {
-        display: inline-block;
-        text-align: left;
-        font-size: 24px;
-        width: 50%;
-    }
+.formFieldGroup span {
+    display: none;
+}
+
+.formFieldGroup.error span {
+    display: inline;
+}
+
+.formFieldGroup label {
+    color: black;
+}
+
+.formFieldGroup.error label {
+    color: #be070d;
+}
+
+.formFieldGroup label i
+{
+    display: none;
+}
+
+.formFieldGroup.error label i
+{
+    display: inline-block;
 }
 
 #title-container
@@ -93,7 +152,7 @@ body
 {
     font-family: 'Space Grotesk', sans-serif;
     font-size: 64px;
-    width: 30%;
+    width: 225px;
     font-weight: 700;
     text-align: center;
     margin: 0;
@@ -104,7 +163,7 @@ body
     font-family: 'Space Grotesk', sans-serif;
     font-size: 32px;
     font-weight: 300;
-    width: 50%;
+    width: 350px;
     text-align: center;
     padding-top: 8px;
     margin: 0;
@@ -159,15 +218,6 @@ body
     width: 50%;
 }
 
-#registerFirstName,
-#registerLastName,
-#registerPhone,
-#registerEmail,
-#registerButton
-{
-    display: none;
-}
-
 .registerFields
 {
     text-align: center;
@@ -198,6 +248,7 @@ body
 }
 
 #registerButton{
+    display: none;
     min-width: 200px;
 }
 
@@ -258,11 +309,11 @@ body
 }
 
 input[type="text"],input[type="password"]{
-    font-size: 18px;
+    font-size: 20px;
     height: 36px;
     text-align: left;
     width: 50%;
-    margin-bottom: 2%;
+    margin-bottom: 6px;
     padding: 4px 16px;
     border-radius: 6px;
     border: 2px solid var(--cadet-gray);
@@ -311,6 +362,12 @@ select{
     font-size: 0.75em;
 }
 
+#registerErrText
+{
+    font-size: 20px;
+    margin-top: 12px;
+}
+
 #firstErrText,
 #lastErrText,
 #usernameErrText,
@@ -318,7 +375,36 @@ select{
 #phoneErrText,
 #emailErrText {
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
     color: #be070d;
     margin-left: 30%;
+}
+
+@media screen and (max-width: 1300px)
+{
+    #loginDiv{
+        min-width: 758px;
+    }
+
+    #title-container
+    {
+        flex-direction: column;
+    }
+
+    #title
+    {
+        width: 200px;
+    }
+
+    #subtitle
+    {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 780px)
+{
+    #loginDiv{
+        min-width: 400px;
+    }
 }
